# FRA

./: README.md
Box/: CMakeLists.txt  package.xml
Box/launch/: display.launch  gazebo.launch
Box/meshes/: base_link.STL
Box/urdf/: Box.csv  Box.urdf
box_description/: package.xml  setup.cfg  setup.py
box_description/launch/: display.launch.py  gazebo.launch.py
box_description/meshes/: base_link.stl
box_description/urdf/: box.gazebo  box.xacro
frame_description/: package.xml  setup.cfg
frame_description/launch/: gazebo.launch.py
frame_description/meshes/: base_link.stl
frame_description/urdf/: frame.gazebo  frame.xacro
kuka_kr3_description/: CMakeLists.txt  README.md  kr3.stp  kr3asm.step  package.xml
kuka_kr3_description/config/: joint_limits.yaml
kuka_kr3_description/data/: kr3_dh_params.csv
kuka_kr3_description/output_urdf/KR3/: CMakeLists.txt  package.xml
kuka_kr3_description/output_urdf/KR3/launch/: load_urdf.launch
kuka_kr3_description/output_urdf/KR3/meshes/: KR-310.stl  KR-340.stl  KR-350.stl  KR-360.stl  KR-370.stl
kuka_kr3_description/urdf/: kuka_kr3.urdf
m6r_0401/: CMakeLists.txt  package.xml
m6r_0401/launch/: display.launch  gazebo.launch
m6r_0401/meshes/: camera.STL  shoulder_link.STL  wriste_pitch.STL  wriste_roll.STL
m6r_0401/urdf/: m6r_0401.csv  m6r_0401.urdf
new_workcell/: frame.stl  frame.xacro  lab_env1.yaml  lab_env2.yaml  path.yaml
