<?xml version="1.0"?>
<package format="3">
  <name>kuka_kr3_description</name>
  <version>0.1.0</version>
  <description>Minimal URDF + CSV for a simplified KUKA KR3 (6-DOF) robot, with primitive geometry.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
</package>
